--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@
 }
 
 body {
+  background: url(images/cork-board.png) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   background-color: #fff;
   display: flex;
   flex-direction: column;
@@ -18,6 +23,8 @@ body {
 
 h1 {
   position: relative;
+  color: #fff;
+  font-size: 32px;
 }
 
 h1 button {
@@ -43,6 +50,7 @@ h1 button {
 }
 
 .btn-ghost {
+  font-size: 20px;
   border: 0;
   background-color: transparent;
 }
@@ -134,20 +142,28 @@ h1 button {
 .navigation {
   display: flex;
   margin: 20px 0;
+  color: #fff;
 }
 
 .navigation .nav-button {
   border: none;
   background-color: transparent;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 24px;
+  color: #fff;
 }
 
 .navigation p {
   margin: 0 25px;
+  font-size: 24px;
 }
 
 .add-container {
+  background: url(images/index-card-add.jpeg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   opacity: 0;
   z-index: -1;
   background-color: #f0f0f0;
